--- a/public/PortfolioPage/portfolio.css
+++ b/public/PortfolioPage/portfolio.css
@@ -13,6 +13,6 @@ html, body {
 
 /* Margin Top Bottom */
 .slight-margin-top-bot {
-  margin-top: 1%;
-  margin-bottom: 1%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
